Ajout tests + corrections des fichiers